# factorize

./: .gitignore  main.py  pyproject.toml
