[project]
name = "factorize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "mypy>=1.17.1",
    "pycryptodome>=3.23.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "types-requests>=2.32.4.20250809",
]
